# fast

./: .gitignore  CMakeLists.txt  FUTURE.md  README.md
bench/: ANALYSIS.md  bench.c  bench_perf.c  lang_report.py  report.py  report_template.tex.j2  run_perf.sh
bench/lang/: bench_ada.adb  bench_c.c  bench_cpp.cpp  bench_fortran.f90  bench_go.go  bench_haskell.hs  bench_java.java  bench_julia.jl  bench_lisp.lisp  bench_mercury.m  bench_ocaml.ml  bench_prolog.pl  bench_python.py  bench_r.R  bench_ruby.rb  bench_rust.rs  bench_scheme.ss  bench_sml.mlb  bench_sml.sml  go.mod
bindings/ada/: fast_binding.ads
bindings/cpp/: fast.hpp
bindings/fortran/: fast_binding.f90
bindings/go/: fast.go
bindings/haskell/: Fast.hs
bindings/java/: FastTree.java  fast_jni.c
bindings/julia/: Fast.jl
bindings/lisp/: fast.lisp
bindings/mercury/: fast.m
bindings/ocaml/: fast.ml  fast_stubs.c
bindings/prolog/: fast.pl
bindings/python/: fast.py
bindings/r/: fast.R
bindings/ruby/: fast.rb
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs
bindings/scheme/: fast.scm
bindings/sml/: fast.sml
include/: fast.h
src/: fast.c  fast_build.c  fast_internal.h  fast_search.c
test/: test_fast.c
